Remove Java 21 Preview (--enable-preview) and move Java 22