@@ -17,8 +17,8 @@
     <revision>4.4.1</revision>
     <changelist>-SNAPSHOT</changelist>  <!-- Remove "-SNAPSHOT" for release -->
 
-    <java-version>21</java-version>
-    <jdk-version>21</jdk-version>
+    <java-version>22</java-version>
+    <jdk-version>22</jdk-version>
     <enforcer.jdk-version>[${jdk-version},)</enforcer.jdk-version>
     <enforcer.maven-version>[3.6.3,)</enforcer.maven-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -111,9 +111,6 @@
           <version>3.12.1</version>
           <configuration>
             <release>${java-version}</release>
-            <compilerArgs>
-                <arg>--enable-preview</arg>
-            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -188,7 +185,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
           <configuration>
-            <argLine>@{argLine} --enable-preview -Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
+            <argLine>@{argLine} -Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
             <parallel>all</parallel>
           </configuration>
         </plugin>
